force-app/main/default/objects/Checkout_Intermediate_Notification__e/Checkout_Intermediate_Notification__e.object-meta.xml
<CustomObject>
    <label>Checkout Intermediate Notification</label>
    <pluralLabel>Checkout Intermediate Notifications</pluralLabel>
</CustomObject>