force-app/main/default/objects/Checkout_Intermediate_Notification__e/fields/Cart_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Cart_Session_ID__c</fullName>
    <label>Cart Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>