force-app/main/default/objects/Checkout_Intermediate_Notification__e/fields/Next_State__c.field-meta.xml
<CustomField>
    <fullName>Next_State__c</fullName>
    <label>Next State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>