force-app/main/default/objects/Checkout_Intermediate_Notification__e/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>